@@ -31,4 +31,11 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 #define PCRELOFFSET          true
 #define COFF_LONG_SECTION_NAMES
 
+#define bfd_arm_allocate_interworking_sections \
+	bfd_arm_pe_allocate_interworking_sections
+#define bfd_arm_get_bfd_for_interworking \
+	bfd_arm_pe_get_bfd_for_interworking
+#define bfd_arm_process_before_allocation \
+	bfd_arm_pe_process_before_allocation
+
 #include "coff-arm.c"
